--- a/css/style.css
+++ b/css/style.css
@@ -6,22 +6,29 @@
     --secundario: #0097a7;
     --gris: #757575;
 }
+
 /* Globales*/
 
 html {
     font-size: 62.5%;
-    box-sizing: border-box; /*Hack para el html, Box Model */
+    box-sizing: border-box;
+    /*Hack para el html, Box Model */
 }
 
-*, *:before, *:after {
+*,
+*:before,
+*:after {
     box-sizing: inherit;
 }
 
 body {
-    font-size: 16px; /* 1 rem es = 10px*/
+    font-size: 16px;
+    /* 1 rem es = 10px*/
     font-family: 'Krub', sans-serif;
-    background-image: linear-gradient(to top, var(--gris) 0%, var(--blanco) 100%);/*Hacia donde va el degradado*/
+    background-image: linear-gradient(to top, var(--gris) 0%, var(--blanco) 100%);
+    /*Hacia donde va el degradado*/
 }
+
 .contenedor {
     max-width: 120rem;
     margin: 0 auto;
@@ -32,14 +39,20 @@ body {
     color: var(--blanco);
     padding: 1rem 3rem;
     margin-top: 1rem;
-    font-size: 2rem;/*Tamaño de la fuente*/
-    text-decoration: none; /*Si decoraciones*/
-    text-transform: uppercase; /**Convertir a mayusculas*/
-    font-weight: bold;/*Texto en negritas (también debpende de las carcateristicas de la fuente)*/
-    border-radius: .5rem; /*Redondear esquinas*/
+    font-size: 2rem;
+    /*Tamaño de la fuente*/
+    text-decoration: none;
+    /*Si decoraciones*/
+    text-transform: uppercase;
+    /**Convertir a mayusculas*/
+    font-weight: bold;
+    /*Texto en negritas (también debpende de las carcateristicas de la fuente)*/
+    border-radius: .5rem;
+    /*Redondear esquinas*/
     width: 90%;
     text-align: center;
 }
+
 @media (min-width: 768px) {
     .boton {
         width: auto;
@@ -47,9 +60,10 @@ body {
 }
 
 .sombra {
-    -webkit-box-shadow: 24px 13px 28px -9px rgba(0,0,0,0.75);
-    -moz-box-shadow: 24px 13px 28px -9px rgba(0,0,0,0.75);
-    box-shadow: 24px 13px 28px -9px rgba(0,0,0,0.75);
+    /*https://www.cssmatic.com/box-shadow*/
+    -webkit-box-shadow: 24px 13px 28px -9px rgba(0, 0, 0, 0.75);
+    -moz-box-shadow: 24px 13px 28px -9px rgba(0, 0, 0, 0.75);
+    box-shadow: 24px 13px 28px -9px rgba(0, 0, 0, 0.75);
     background-color: var(--blanco);
     padding: 2rem;
     border-radius: 2rem;
@@ -59,14 +73,18 @@ body {
 h1 {
     font-size: 3.8rem;
 }
+
 h2 {
     font-size: 2.8rem;
 }
+
 h3 {
     font-size: 1.8rem;
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     text-align: center;
 }
 
@@ -74,7 +92,7 @@ h1, h2, h3 {
 Los id se invocan con el signo de gato #id{}*/
 .titulo span {
     font-size: 2rem;
-    color:blue;
+    color: blue;
 }
 
 /* Navegacion principal*/
@@ -86,6 +104,7 @@ Los id se invocan con el signo de gato #id{}*/
     display: flex;
     flex-direction: column;
 }
+
 /*480px, 768px, 1140px, 1400px*/
 @media (min-width: 768px) {
     .navegacion-principal {
@@ -103,6 +122,7 @@ Los id se invocan con el signo de gato #id{}*/
     font-weight: bold;
     padding: 1.5rem;
 }
+
 .navegacion-principal a:hover {
     background-color: var(--primario);
     color: var(--oscuro);
@@ -115,14 +135,15 @@ Los id se invocan con el signo de gato #id{}*/
     background-size: cover;
     height: 450px;
     /*padding: 20px;*/
-    position: relative; /*EL padre siempre debe tenen posiscion relativa*/
+    position: relative;
+    /*EL padre siempre debe tenen posiscion relativa*/
     margin-bottom: 2rem;
 }
 
 .contenido-hero {
     position: absolute;
     background-color: rgba(0, 0, 0, 0.6);
-    background-color: rgb(0 0 0  / 70%);
+    background-color: rgb(0 0 0 / 70%);
     width: 100%;
     height: 100%;
 
@@ -142,6 +163,41 @@ Los id se invocan con el signo de gato #id{}*/
     align-items: flex-end;
 }
 
+/*Servicios*/
+@media (min-width: 768px) {
+    .servicios {
+        display: grid;
+        /*Habilitando CSS Grid*/
+        grid-template-columns: repeat(3, 1fr);
+        column-gap: 1rem;
+    }
+}
+
+.servicio {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.servicio h3 {
+    color: var(--secundario);
+    font-weight: 400;
+}
+
+.servicio p {
+    line-height: 2;
+    text-align: center;
+}
+
+.servicio .iconos {
+    height: 15rem;
+    width: 15rem;
+    background-color: var(--primario);
+    border-radius: 50%;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
 
 
 /*Especificidad en CSS es la importancia que tiene un selector para aplicar el código CSS a un
